--- a/style_ins.css
+++ b/style_ins.css
@@ -5,6 +5,10 @@ body {
 
 span {
     display: flex;
+    justify-content: center;
+    margin-right: 25px;
+    margin-left: 25px;
+    background-color: white;
 }
 
 img {
